--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,16 @@
 # Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency=false
-# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
+# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration-cache.html
 org.gradle.configuration-cache=true
-# Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
+# Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build-cache.html
 org.gradle.caching=true
+
+# generate-meta
+generateMeta=:generate-meta
+generateMetaApi=:generate-meta:generate-meta-api
+generateMetaDomain=:generate-meta:generate-meta-api:generate-meta-domain
+generateMetaException=:generate-meta:generate-meta-api:generate-meta-exception
+generateMetaReadModel=:generate-meta:generate-meta-api:generate-meta-readmodel
+generateMetaApplication=:generate-meta:generate-meta-application
+generateMetaRdbAdapter=:generate-meta:generate-meta-rdb-adapter
+generateMetaWebMvcAdapter=:generate-meta:generate-meta-webmvc
